added loop animation to App.tsx, installed framer-motion vers '^11.9.0', added a html file to test

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,5 +1,12 @@
 .App {
-  text-align: center;
+  height: 100vh;
+  background-color: #00ED64;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .App-logo {
