--- a/frontend/src/css/styles.css
+++ b/frontend/src/css/styles.css
@@ -240,4 +240,32 @@ section > p {
     background-color: var(--evergreen);
   }
 
+.mobile-charts {
+  /* Customize how charts are displayed on mobile */
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+@media (max-width: 800px) {
+  /* Styles for mobile devices */
+  .progressBar {
+    height: 5px;
+    background-color: #00ccff;
+  }
+
+  .section > h1{
+    transform: translateX(-50%);
+    font-size: 25vh;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 100%;
+    padding: 10px 0;
+    color: var(--springGreen);
+    margin: 0;
+  }
+}
+
   
