--- a/frontend/src/css/styles.css
+++ b/frontend/src/css/styles.css
@@ -1,3 +1,15 @@
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 body {
     --black: #000000;
     --ash-black: #222;
@@ -240,74 +252,29 @@ section > p {
   }
 
 .mobile-charts {
-  /* Customize how charts are displayed on mobile */
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 
-@keyframes rotate {
-  0% {
-    transform: rotate(0deg);
-  }
-  50% {
-    transform: rotate(180deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-.logo-container {
-  height: 100%;
+.logo-container{
+  position: absolute;
+  top: 0;
+  left: 0;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
+  justify-content: flex-start;
+  width: 100%;
+  height: 10%;
+  object-fit: contain;
 }
 
-.logo {
-  width: 40%;
-  object-fit: contain;
-  padding: 10px 0;
-  position: relative;
-  margin: 0;
-}
 
 .turner {
   animation: rotate 10s infinite linear;
 }
 
 .stable {
-  padding-left: 5px;
-}
-
-.header-container {
-  display: flex;
-  justify-content: flex-start;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 25%;
-  padding: 10px;
-  box-sizing: border-box;
-  background-color: var(--background);
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out;
-}
-
-.header-container.visible {
-  opacity: 1;
-}
-
-
-.header {
-  width: 40%;
-  max-width: 200px;
-  object-fit: contain;
-  margin: 0;
-  height: auto;
+  margin-left: 5vh;
 }
 
 @media (max-width: 900px) {
