--- a/frontend/src/css/styles.css
+++ b/frontend/src/css/styles.css
@@ -12,11 +12,11 @@ body {
     --orange: #fd7702;
     --yellow: #ffbb00;
     --evergreen: #023430;
-    --springGreen: #00ED64;
-  
+    --springGreen: #d09b9b;
+
     --background: var(--evergreen);
     --accent: var(--white);
-  
+
     margin: 0;
     padding: 0;
     background-color: var(--background);
@@ -24,14 +24,14 @@ body {
     max-width: 100%;
     overflow-x: hidden;
   }
-  
+
   * {
     font-family: sofia-pro, sans-serif;
     font-weight: 400;
     font-style: normal;
     -webkit-font-smoothing: antialiased;
   }
-  
+
   h1,
   h2,
   h3 {
@@ -39,7 +39,7 @@ body {
     font-weight: 600;
     font-style: normal;
   }
-  
+
   h1 {
     font-size: 36px;
     font-weight: 700;
@@ -48,17 +48,28 @@ body {
     text-align: center;
     margin: 100px 0 40px;
   }
-  
+
   h2 {
-    font-weight: 400;
-    margin: 50px 0 10px;
+    font-size: 36px;
+    letter-spacing: -1px;
+    line-height: 1.2;
+    text-align: left;
+    font-weight: 600;
   }
-  
+
+  h3{
+    font-size: 24px;
+    letter-spacing: -1px;
+    line-height: 1.2;
+    text-align: left;
+    font-weight: 600;
+  }
+
   p {
-    margin: 0 0 30px 0;
+    text-align: left;
     font-size: 18px;
   }
-  
+
   footer {
     position: fixed;
     bottom: 0;
@@ -79,7 +90,7 @@ body {
     font-size: 14px;
     line-height: 14px;
   }
-  
+
   footer::before {
     display: block;
     content: "";
@@ -91,41 +102,41 @@ body {
     background: var(--accent);
     opacity: 0.2;
   }
-  
+
   footer svg {
     margin-right: 20px;
   }
-  
+
   footer a {
     text-decoration: none;
     color: var(--accent);
   }
-  
+
   code {
     font-family: input-mono, monospace;
     font-weight: 400;
     font-style: normal;
   }
-  
+
   ::-webkit-scrollbar {
     height: 5px;
     width: 5px;
     background: var(--background);
   }
-  
+
   ::-webkit-scrollbar-thumb {
     background: var(--accent);
     -webkit-border-radius: 1ex;
   }
-  
+
   ::-webkit-scrollbar-corner {
     background: var(--background);
   }
-  
+
   html {
     scroll-snap-type: y mandatory;
   }
-  
+
   h1 {
     font-size: 56px;
     font-weight: 700;
@@ -223,7 +234,7 @@ section > p {
     width: 100%;
     height: 100%;
   }*/
-  
+
   .progressBar {
     position: fixed;
     left: 0;
@@ -363,26 +374,125 @@ section > p {
   border: var(--evergreen);
 }
 
+/* grid layout part */
+
 .map-segment-wrapper {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: auto;
-  gap: 10px;
+  gap: 20px;
+  padding: 20px;
+  grid-auto-rows: minmax(auto, auto);
+  height: 80%;
 }
 
 .grid-item-1 {
   grid-column: span 2;
 }
 
-.grid-item-2, .grid-item-3, .grid-item-4, .grid-item-5 {
+.grid-item-2 {
   grid-column: span 1;
 }
-.grid-item-3, .grid-item-4, .grid-item-5{
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: auto;
-  gap: 10px;
+
+.map-segment-wrapper .grid-item p {
+  margin: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  word-wrap: break-word;
+  overflow-wrap: break-word; /* Ensures long words wrap */
 }
+
+.map-segment-wrapper .grid-item {
+  padding: 10px;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  color: black;
+}
+
+.map-segment-wrapper .grid-item {
+  margin: 0 0;
+  font-size: 24px;
+}
+
+.map-segment-wrapper .circle-img {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f0f0f0;
+  border: 2px solid #00ccff;
+}
+
+.map-segment-wrapper .circle-img img {
+  width: 80%;
+  height: 80%;
+}
+
+.map-segment-wrapper .grid-item:not(:last-child) {
+  border-right: 2px solid var(--springGreen);
+}
+
+.map-segment-wrapper .grid-item-3, .grid-item-4, .grid-item-5 {
+  border-bottom: 2px solid var(--springGreen);
+}
+
+.map-segment-wrapper .grid-item:hover {
+  background-color: #e0f7fa;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.item-1{
+  position: relative;
+  margin: auto;
+}
+
+h3{
+  margin: 0;
+}
+
+
+.grid-item-3,
+.grid-item-4,
+.grid-item-5 {
+  display: grid;
+  grid-template-columns: 3fr 1fr; /* Two columns for the top row */
+  grid-template-rows: auto 1fr; /* First row auto height, second row smaller */
+  gap: 10px; /* Space between items */
+}
+
+.grid-item-3 .item-1,
+.grid-item-3 .item-2,
+.grid-item-4 .item-1,
+.grid-item-4 .item-2,
+.grid-item-5 .item-1,
+.grid-item-5 .item-2 {
+  overflow-wrap: break-word; /* Ensure long words wrap */
+  word-wrap: break-word; /* Ensure long words wrap */
+}
+
+.grid-item-3 .item-3,
+.grid-item-4 .item-3,
+.grid-item-5 .item-3 {
+  grid-column: 1 / -1;
+  padding: 10px;
+  background-color: #e0f7fa;
+  border-radius: 5px;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  max-height: 80px;
+  overflow: hidden;
+  margin-top: auto;
+}
+
+.grid-item-3 .item-3 p,
+.grid-item-4 .item-3 p,
+.grid-item-5 .item-3 p {
+  margin: 0;
+  line-height: 1.2;
+}
+
+
 @media (max-width: 800px) {
 
   .progressBar {
