--- a/frontend/src/css/styles.css
+++ b/frontend/src/css/styles.css
@@ -12,7 +12,7 @@ body {
     --orange: #fd7702;
     --yellow: #ffbb00;
     --evergreen: #023430;
-    --springGreen: #d09b9b;
+    --springGreen: #22ce00;
 
     --background: var(--evergreen);
     --accent: var(--white);
@@ -47,6 +47,7 @@ body {
     line-height: 1.2;
     text-align: center;
     margin: 100px 0 40px;
+    color: var(--evergreen);
   }
 
   h2 {
@@ -422,15 +423,14 @@ section > p {
   align-items: center;
   background-color: #f0f0f0;
   border: 2px solid #00ccff;
+  box-shadow:
+          0 10px 20px rgba(0, 0, 0, 0.15),
+          0 5px 10px rgba(0, 0, 0, 0.1);
 }
 
 .map-segment-wrapper .circle-img img {
   width: 80%;
   height: 80%;
-}
-
-.map-segment-wrapper .grid-item:not(:last-child) {
-  border-right: 2px solid var(--springGreen);
 }
 
 .map-segment-wrapper .grid-item-3, .grid-item-4, .grid-item-5 {
@@ -492,6 +492,25 @@ h3{
   line-height: 1.2;
 }
 
+
+.map-item {
+  position: relative; /* Position relative to contain absolute elements */
+  overflow: hidden; /* Hide overflow to keep the image contained */
+  display: flex; /* Enable flexbox for centering */
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+  border-radius: 10px; /* Optional: rounded corners */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Optional: shadow for depth */
+}
+
+.map-item img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 @media (max-width: 800px) {
 
