--- a/frontend/src/css/styles.css
+++ b/frontend/src/css/styles.css
@@ -47,7 +47,7 @@ body {
     line-height: 1.2;
     text-align: center;
     margin: 100px 0 40px;
-    color: var(--evergreen);
+    color: var(--springGreen);
   }
 
   h2 {
@@ -449,6 +449,7 @@ section > p {
 
 h3{
   margin: 0;
+  padding-top: 35px;
 }
 
 
@@ -475,10 +476,10 @@ h3{
 .grid-item-4 .item-3,
 .grid-item-5 .item-3 {
   grid-column: 1 / -1;
-  padding: 10px;
   background-color: #e0f7fa;
   border-radius: 5px;
   overflow-wrap: break-word;
+  padding: 10px 10px 50px;
   word-wrap: break-word;
   max-height: 80px;
   overflow: hidden;
@@ -510,6 +511,15 @@ h3{
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.graph-section {
+  flex-direction: column;
+}
+
+.graph-section > h3{
+  width: 75%;
+  margin-bottom: 5vh;
 }
 
 @media (max-width: 800px) {
